--- a/src/views/courses/index.pug
+++ b/src/views/courses/index.pug
@@ -1,13 +1,11 @@
-html
-head
-    title Хекслет
-body
-    h1= header
-    if courses.length === 0
-      p Пока не добавлено ни одного курса
-    else
-      each course in courses
-        div
-          h2
-            a(href=`/courses/${course.id}`)= course.title
-          p= course.description
+extends ../layouts/page.pug
+
+block content
+  h1= header
+  if courses.length === 0
+    p Пока не добавлено ни одного курса
+  else
+    each course in courses
+      div
+        h2
+          a(href=`/courses/${course.id}`) #{course.title}
