--- a/src/views/courses/show.pug
+++ b/src/views/courses/show.pug
@@ -1,8 +1,6 @@
-doctype html
-html
-  head
-    title Hello Hexlet!
-  body
+extends ../layouts/page.pug
+
+block content
     main
       h1= course.title
       p= course.description
