--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,6 @@
-doctype html
-html(lang='en')
-head
-    title Hello Hexlet!
-body
-    main
-    h1 Hello, World!
-    p Fastify + Pug
+extends layouts/page.pug
+
+block content
+  main
+  h1 Hello, World!
+  p Fastify + Pug
