--- a/src/views/layouts/page.pug
+++ b/src/views/layouts/page.pug
@@ -1,9 +1,10 @@
+doctype html
 html
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
   body
-    header 
+    header
       nav
         a(href='/') Главная
         a(href='/courses') Курсы
