--- a/src/views/courses/new.pug
+++ b/src/views/courses/new.pug
@@ -3,7 +3,7 @@ extends ../layouts/page.pug
 block content
   if error
     p= error.message
-  form(action = '/courses', method = 'post')
+  form(action = routes.coursesPath(), method = 'post')
     div
     label Название:
         input(type = 'text', name = 'title', value = title)
