--- a/src/views/users/index.pug
+++ b/src/views/users/index.pug
@@ -4,4 +4,4 @@ block content
   each user in users
     div
       h2
-        a(href=`/users/${user.id}`) #{user.name}
+        a(href=routes.userPath(user.id)) #{user.name}
