--- a/src/views/users/index.pug
+++ b/src/views/users/index.pug
@@ -1,6 +1,7 @@
 extends ../layouts/page.pug
 
 block content
+  a(href=routes.newUserPath()) Добавить нового пользователя
   each user in users
     div
       h2
