--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,3 +4,5 @@ block content
   main
   h1 Hello, World!
   p Fastify + Pug
+  if !visited
+    | Это сообщение показывается только один раз. Если вы хотите увидеть его снова, сотрите куки
